projects/vb6parse/snapshots/parsers/cst/declarations/event_custom_type_parameter.snap
---
source: projects/vb6parse/src/parsers/cst/declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EventStatement
      children:
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: RecordChanged
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: ByValKeyword
              text: ByVal
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: Record
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: CustomerRecord
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
