projects/vb6parse/snapshots/parsers/cst/declarations/event_no_parameters.snap
---
source: projects/vb6parse/src/parsers/cst/declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EventStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Initialize
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
